--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <!-- TITLE OF SITE-->
-  <title> CV </title>
+  <title> Resume </title>
 
   <!-- META TAG -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
